cmake_minimum_required(VERSION 3.20.0)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

project(Expert_Cpp CXX)

#add_executable(
#    Expert_Cpp
#    src/main.cpp
#)

add_subdirectory(common)

#add_subdirectory(src/SmartPointers)
#add_subdirectory(src/Streams)